[gd_scene load_steps=3 format=3 uid="uid://bdbpip0qujq7s"]

[ext_resource type="Script" uid="uid://cogcmrafj7ejj" path="res://ui.gd" id="1_fyqef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rvswv"]
content_margin_left = 8.0
content_margin_right = 8.0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="TimeRemaining" type="Label" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "30"

[node name="GameOverFlash" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-5727, -2236, 6632, -4615, 6993, 4066, -5770, 3922)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -43.5
offset_right = 106.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="GameOverText" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_rvswv")
text = "YOU DID NOT
STOP THE APOCALYPSE"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="GameOverButtonClip" type="Control" parent="VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2

[node name="GameOverButtonBox" type="HBoxContainer" parent="VBoxContainer/GameOverButtonClip"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="RetryButton" type="Button" parent="VBoxContainer/GameOverButtonClip/GameOverButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Retry"

[node name="NextButton" type="Button" parent="VBoxContainer/GameOverButtonClip/GameOverButtonBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="QuitButton" type="Button" parent="VBoxContainer/GameOverButtonClip/GameOverButtonBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="RestartTip" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.5
offset_top = 8.0
offset_right = 142.5
offset_bottom = 32.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
text = "hold r to restart if stuck"

[connection signal="pressed" from="VBoxContainer/GameOverButtonClip/GameOverButtonBox/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GameOverButtonClip/GameOverButtonBox/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="VBoxContainer/GameOverButtonClip/GameOverButtonBox/QuitButton" to="." method="_on_quit_button_pressed"]
